# push_swap

./: CMakeLists.txt  Makefile  README.md  push_swap
includes/: push_swap.h
libft/: Makefile  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_count_words.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_mystrncpy.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strndup.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  (+1 more)
sources/: add_stack_a.c  create_frame.c  find_biggest_or_smallest.c  find_moves.c  free.c  ft_strchr_ps.c  median.c  moves.c  print.c  push_median.c  push_quartes.c  push_swap.c  solve_5_or_less.c  solve_big_num.c  solve_over_100.c  solver.c  solver_before_hun.c  sorted.c  splits.c
sources/move_and_fill/: do_pa.c  do_pb.c  do_ra.c  do_rb.c  do_rra.c  do_rrb.c  do_sa.c  do_sb.c  stack_top.c
