cmake_minimum_required(VERSION 3.20)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled sources/push_swap.c sources/create_frame.c sources/trash.c sources/ft_strchr_ps.c sources/create_frame.c sources/sorted.c sources/solver.c sources/move_and_fill/do_sa.c sources/find_biggest_or_smallest.c sources/moves.c sources/move_and_fill/do_rra.c sources/move_and_fill/do_ra.c sources/move_and_fill/do_pb.c sources/move_and_fill/stack_top.c sources/move_and_fill/do_pa.c sources/move_and_fill/do_sb.c sources/median.c sources/solve_big_num.c sources/push_median.c sources/move_and_fill/do_rb.c sources/push_quartes.c sources/solve_over_100.c sources/find_moves.c sources/splits.c sources/add_stack_a.c sources/solver_before_hun.c sources/free.c)
